syntax = "proto2";

package mls;

option java_package         = "jssi.mls.fingerprint";
option java_outer_classname = "FingerprintProtos";

message LogicalFingerprint {
  optional bytes content = 1;
//  optional bytes identifier = 2;
}

message CombinedFingerprints {
  optional uint32             version           = 1;
  optional LogicalFingerprint localFingerprint  = 2;
  optional LogicalFingerprint remoteFingerprint = 3;
}